src/objects/Outage_Template__c.object
<CustomObject>
    <fields>
        <fullName>Email_Body_Template__c</fullName>
        <label>Email Body Template</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email_Template__c</fullName>
        <label>Email Template</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SMS_Template__c</fullName>
        <label>SMS Template</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Outage Template</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Outage Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Outage Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>